--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,44 @@ code {
     monospace;
 }
 
+body {
+  font-family: Roboto, sans-serif;
+}
+
+.trigger {
+  padding: 0 24px;
+  font-size: 18px;
+  line-height: 64px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
+}
+
+.logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.ant-layout{
+  min-height: 100vh;
+}
+.ant-layout-sider{
+    flex: 0 0 250px;
+    max-width: 250px;
+    min-width: 250px;
+    width: 250px;
+}
+.ant-layout-sider-collapsed{
+  flex: 0 0 80px;
+  max-width: 80px;
+  min-width: 80px;
+  width: 80px;
+}
+main{
+  overflow-y: scroll;
+}
+
