--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+body{
+  font-family: Roboto, sans-serif;
+
+}
 .App {
   text-align: center;
 }
@@ -35,4 +39,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+.green {
+  color: green;
+} 
+.red {
+  color: red;
 }
