--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -16,9 +15,6 @@ code {
     monospace;
 }
 
-body {
-  font-family: Roboto, sans-serif;
-}
 
 .trigger {
   padding: 0 24px;
@@ -42,18 +38,56 @@ body {
   min-height: 100vh;
 }
 .ant-layout-sider{
-    flex: 0 0 250px;
-    max-width: 250px;
-    min-width: 250px;
-    width: 250px;
+    flex: 0 0 250px !important;
+    max-width: 250px !important;
+    min-width: 250px !important;
+    width: 250px !important;
 }
 .ant-layout-sider-collapsed{
-  flex: 0 0 80px;
-  max-width: 80px;
-  min-width: 80px;
-  width: 80px;
+  flex: 0 0 80px !important;
+  max-width: 80px !important;
+  min-width: 80px !important;
+  width: 80px !important;
+}
+.sm-logo {
+  display: none;
+  transition: 0.3s;
+}
+.lg-logo {
+  
+  transition: 0.3s;
+}
+.ant-layout-sider-collapsed .sm-logo {
+  display: block;
+  transition: 0.3s;
+}
+.ant-layout-sider-collapsed .lg-logo {
+  display: none;
+  transition: 0.3s;
+}
+.logo {
+  background-color: #1890ff;
+  height: 64px;
+  margin: 0;
 }
 main{
+  height: 100vh;
   overflow-y: scroll;
+  background-color: transparent !important;
 }
 
+.ant-menu-title-content {
+  font-size: 16px;
+}
+.ant-layout-header h5{
+ line-height: 30px;
+ font-size: 15px;
+}
+.ant-layout-header p{
+  line-height: 20px;
+  font-size: 13px;
+ }
+.ant-layout-header div .badge{
+  top:16px;
+  right: -6px;
+}
