--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,15 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  color: #efdeed;
+  font-family: 'Work Sans', sans-serif;
+  overflow: hidden;
 }
 
+canvas {
+  width: 100vw;
+  height: 100vh;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -28,6 +36,41 @@
   color: #61dafb;
 }
 
+.glass {
+  background: rgba(245, 199, 238, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10.5px);
+  -webkit-backdrop-filter: blur(10.5px);
+  border-radius: 10px;
+  /*animation: blur-in 500ms 2s forwards;*/
+}
+
+.glass h3 {
+  font-family: 'Noto Sans Mono', monospace;
+}
+.headingGlass {
+  background: rgba(255, 0, 229, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  /*backdrop-filter: blur( 10.5px );
+  -webkit-backdrop-filter: blur( 10.5px );*/
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  animation: blur-in forwards;
+}
+.glassMobile {
+  background: rgba(245, 199, 238, 0.15);
+  backdrop-filter: blur(10.5px);
+  -webkit-backdrop-filter: blur(10.5px);
+}
+@keyframes blur-in {
+  from {
+    backdrop-filter: blur(0px);
+  }
+  to {
+    backdrop-filter: blur(10.5px);
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +79,4 @@
     transform: rotate(360deg);
   }
 }
+
